fixed gradient of wallpaper on smaller screen

--- a/stylesheets/stylesheet.css
+++ b/stylesheets/stylesheet.css
@@ -12,30 +12,30 @@ h3 {
 	background-color: black;
 }
 
-.nav li a {
-	color: white;
-	font-size: 22px;
+.topnav {
+	width: 100%;
 }
-
-#nav  {
-	border: 1px solid black;
+.nav li a {
+	color: black;
 	
 }
-
-.navbar-brand {
-	font-size: 1.5em;
+.navbar-home {
+	float: left;
+	height: 50px;
+	padding: 15px 15px;
+	line-height: 20px;
+	font-size: 2em;
+	border: 1px solid red;
 }
 
-.navbar-nav li a {
-	font-size: 1.5em;
 
+
+button .icon-bar {
+	background-color: #888;
 }
-
-@media (max-width: 300px) {
-	ul.sites > li {
-		display: block;
-		padding: 0;
-		margin-bottom: 20px;
+@media (max-width: 400px) {
+	.name {
+		color: black;
 	}
 }
 .wallpaper {
@@ -46,26 +46,30 @@ h3 {
 	background-position: center;
 	text-align: center;
 	
-	
 }
 
 @media (max-width: 400px) {
 	.wallpaper {
-		border: 1px solid green;
-		background-position: right 35% bottom 0px;
-		
+
+		background-position: right 30% bottom 0;
 	}
 }
 /* Source: https://developer.mozilla.org/en-US/docs/Web/CSS/CSS_Images/Using_CSS_gradients*/
+
 @media (max-width: 400px) {
 	.gradient {
+
 		/*The old syntax, deprecated and prefixed, for old browsers*/
-		background-image: -moz-linear-gradient(hsla(0, 0%, 100%, 0.3), #fcc600), url("../images/intro-photo-1.jpg");
+		background-image: -moz-linear-gradient(hsla(0, 0%, 100%, 0.3),  #fcc600), url("../images/intro-photo-1.jpg");
 		background-image: -webkit-linear-gradient(hsla(0, 0%, 100%, 0.3), #fcc600), url("../images/intro-photo-1.jpg");
 
 		/*The new syntax needed by standard-compliant browsers (Opera 12.1,
 		 IE 10, Firefox 16, Chrome 26, Safari 6.1), without prefix*/
-		background-image: linear-gradient(hsla(0, 0%, 100%, 0.3), #fcc600), url("../images/intro-photo-1.jpg") ;
+		background-image: linear-gradient(hsla(0, 0%, 100%, 0.3), #fcc600), url("../images/intro-photo-1.jpg");
+	}
+	.gradient {
+		width:100%;
+		height:100%;
 	}	
 }
 /* #home h1 h4 h2 {
@@ -78,8 +82,8 @@ h3 {
 
 
 .welcome {
-	padding-top: 45%;
-	padding-bottom:10%;
+	padding-top: 30%;
+	padding-bottom:30%;
 	align-items: center;
 	justify-content: center;
 	font-family: Arial;
@@ -94,15 +98,15 @@ h3 {
 }
 
 .welcome h1 {
-	font-size: 5em;
+	font-size: 6em;
 }
 
 .welcome p {
-	font-size: 2em;
+	font-size: 3em;
 }
 
 .welcome h2 {
-	font-size: 3em;
+	font-size: 4em;
 }
 
 .btn {
